--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -48,3 +48,4 @@
 </p>
 
 <%= link_to "Edit Question", edit_question_path(@question) %>
+<%= link_to "Delete Question", "/questions/#{@question.id}/delete" %>
