add questions#destroy from questions show page

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -47,5 +47,6 @@
     </ul>
 </p>
 
-<%= link_to "Edit Question", edit_question_path(@question) %>
-<%= link_to "Delete Question", "/questions/#{@question.id}/delete" %>
+<div><%= link_to "Edit Question", edit_question_path(@question) %></div>
+
+<div><%= button_to "Delete Question", {controller: "questions", action: "destroy"}, :method => "delete" %></div>
