--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_field :description %>
   </div>
 
+  <div class="field">
+    <%= f.label :markdown %><br />
+    <%= f.text_field :markdown %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
