--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'shared/form', question: @question %>
 
-<div><%= button_to "Delete Question", {controller: "questions", action: "destroy"}, :method => "delete" %></div>
+<div><%= link_to "Delete Question", question_path(@question), method: :delete %></div>
