--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -55,10 +55,10 @@
   <strong>Answers:</strong>
     <ul>
       <% @answers.each do |answer| %>
-        <li>
+        <li id=<%= answer.id %> >
           <%= answer.body %>
             <div>
-              <%= link_to "Mark as best answer", edit_question_answer_path(@question, answer), class: "button", id: answer.id %>
+              <%= link_to "Mark as best answer", edit_question_answer_path(@question, answer), class: "button" %>
             </div>
         </li>
         <% if answer.markdown %>
