add css styling to root and questions show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RescueMission</title>
+    <title>QuestionSite</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -9,6 +9,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="top-bar">
+      <h1 class="title"><a href="/">Question Depot</a></h1>
+      <p class="submit-link"><%= link_to 'Submit New Question', new_question_path %></p>
+    </div>
+
+      <%= yield %>
   </body>
 </html>
