--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,5 +1,23 @@
-<h1>Edit Question</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>QuestionSite</title>
+    <%= csrf_meta_tags %>
 
-<%= render 'shared/form', question: @question %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+  </head>
 
-<div><%= link_to "Delete Question", question_path(@question), method: :delete %></div>
+  <body>
+    <div class="main-back">
+    <div class="main">
+      <h2 class="new-question-title">Edit Question</h2>
+      <%= render 'shared/form', question: @question %>
+
+      <div class="question-link">
+        <%= link_to "Delete Question", question_path(@question), method: :delete %>
+      </div>
+    </div>
+  </div>
+  </body>
+</html>
