--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,17 @@
-<h1>New Question</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>QuestionSite</title>
+    <%= csrf_meta_tags %>
 
-<%= render 'shared/form', question: @question %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+  </head>
+
+  <body>
+    <div class="main">
+      <h2 class="new-question-title">New Question</h2>
+      <%= render 'shared/form', question: @question %>
+    </div>
+  </body>
+</html>
