--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,136 @@
  *= require_tree .
  *= require_self
  */
+
+ html, body, h1, h2, h3, h4, p, div, ul, li {
+   padding: 0;
+   border: 0;
+   margin: 0;
+   font: inherit;
+   font-size: 100%;
+ }
+
+ h1 {
+   font-size: 40px;
+   font-weight: bold;
+ }
+
+ .top-bar {
+   background-color: #6e2c00;
+   height: 50px;
+   overflow: hidden;
+   position: fixed;
+   top: 0;
+   width: 100%;
+ }
+
+.submit-link {
+  float: left;
+  margin-left: 60px;
+  padding-top: 15px;
+  font-size: 20px;
+}
+
+.submit-link a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: georgia;
+
+}
+
+.welcome-paragraph {
+  color: black;
+  font-family: georgia;
+  font-size: 25px;
+  padding: 10px;
+  margin: 0px auto;
+  width: 800px;
+}
+
+.form-title, .form-description {
+  width: 800px;
+
+}
+
+.notice {
+  margin-left: 170px;
+  font-weight: bold;
+}
+
+.notice-list {
+  list-style-type: none;
+}
+
+a {
+  color: black;
+}
+
+.main-back {
+  background-color: #6e2c00;
+}
+
+.main {
+   background-color: #6e2c00;
+   background-image: url(desert_4.jpeg);
+   background-position: top center;
+   background-repeat: no-repeat;
+   margin-top: 50px;
+   height: 720px;
+ }
+
+.question-list {
+  list-style-type: none;
+}
+
+.question-list-item {
+  font-size: 30px;
+  padding-top: 10px;
+}
+
+.questions-header, .answers-header {
+  width: 400px;
+  margin: 0 auto;
+}
+
+.form-list {
+  list-style-type: none;
+}
+
+.new-question-title {
+  font-family: georgia;
+  margin-left: 170px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.form-title, .form-description, .control-group, .form-actions, .form-list, .question-link, .answers-title {
+  margin-left: 170px;
+  font-size: 25px;
+  padding-top: 20px;
+}
+
+h3, .answers-title {
+  font-family: georgia;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.answers-list {
+  list-style-type: none;
+}
+
+
+.questions {
+  text-align: center;
+  padding: 20px;
+}
+
+ .title {
+   float: left;
+   margin-left: 450px;
+ }
+
+ .title a {
+  font-family: Georgia;
+  text-decoration: none;
+}
