edited css styling, styled body class to correct issue with edit question page white space at bottom of page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
-  <body>
+  <body class="main">
     <div class="top-bar">
       <h1 class="title"><a href="/">Question Depot</a></h1>
       <p class="submit-link"><%= link_to 'Submit New Question', new_question_path %></p>
